# Collatz-conjecture

./: .gitignore  CMakeLists.txt  README.md
assembly/: collatz.asm
cuda/: collatz.cu  defs.cuh  kernel.cu  mainframe.cu
src/: defs.hpp  kernel.cu  mainframe.cu
verilog/: README.md
